# cudamica

./: Makefile.am  configure.ac  deleter.py  evalrev  jah.in  reconf.sh  test.in
Norand/: makefile  objects.mk
Norand/src/: amica.d  config.d  cudaamica.d  device.d  error.d  helpers.d  kernels.d  params.d  preprocess.d  subdir.mk
include/: amica.h  config.h  device.h  error.h  helpers.h  kernels.h  params.h  preprocess.h  tipos.h  tools.h
src/: amica.cu  config.c  cudaamica.cu  device.cu  error.cu  helpers.cu  kernels.cu  params.c  preprocess.cu
testing/: Makefile  Makefile.blazing
